[gd_scene load_steps=7 format=3 uid="uid://bitv0k63w6aiq"]

[ext_resource type="Theme" uid="uid://clyg10fflr645" path="res://ui/main_theme.tres" id="1_d5mfk"]
[ext_resource type="Script" path="res://ui/title_page.gd" id="1_ulqil"]
[ext_resource type="Texture2D" uid="uid://bp44eva7xcqt5" path="res://assets/UI/title_page/title.png" id="2_ln2f5"]

[sub_resource type="Animation" id="Animation_2c4ay"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/TitleSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(18, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title/TitleSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bhpd5"]
resource_name = "title_bob"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title/TitleSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3.83333, 5.7, 8),
"transitions": PackedFloat32Array(-2, -2, -2, -2, -2),
"update": 0,
"values": [Vector2(18, 0), Vector2(25, 10), Vector2(18, -12), Vector2(9, -4), Vector2(38, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Title/TitleSprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(4.6, 9.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [-0.0261799, 0.0261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gimso"]
_data = {
"RESET": SubResource("Animation_2c4ay"),
"title_bob": SubResource("Animation_bhpd5")
}

[node name="TitlePage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_d5mfk")
script = ExtResource("1_ulqil")
metadata/_edit_lock_ = true

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -54.5
offset_right = 81.5
offset_bottom = 54.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Play"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 73.0
offset_right = 64.0
offset_bottom = 161.0
grow_horizontal = 2
grow_vertical = 2
text = "Settings"

[node name="Title" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -154.0
offset_right = 20.0
offset_bottom = -114.61
grow_horizontal = 2
grow_vertical = 2

[node name="TitleSprite" type="Sprite2D" parent="Title"]
position = Vector2(18, 0)
texture = ExtResource("2_ln2f5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gimso")
}

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
